# inheritance_explorer

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-verification.yaml  create-gh-release.yaml  publish-to-pypi.yaml  run-tests.yaml  run-tests.yml  style-checks.yml  style_checks.yml  type-check.yaml
docs/: Makefile  conf.py  examples.rst  index.rst  inheritance_explorer.rst  installation.rst  make.bat  modules.rst  usage.rst
docs/examples/: _tmp.html  command_line_usage.rst  ex_001_basic_usage.ipynb  ex_002_inheritance_scope.ipynb  ex_003_Qwidgets.ipynb  ex_004_code_comparison.rst  ex_005_interactive_graph.rst  ex_006_interactive_graph_styles.ipynb  ex_006_interactive_graph_styles.rst  napari_reqs.txt
inheritance_explorer/: __init__.py  _testing.py  _widget_support.py  cli.py  inheritance_explorer.py  similarity.py  widget_support.py
inheritance_explorer/tests/: __init__.py  test_cli.py  test_inheritance_explorer.py  test_similarity.py  test_utilities.py  test_widgets.py
tests/: lint_requirements.txt  test_cli.py  test_inheritance_explorer.py  test_similarity.py  test_widgets.py
