[tool.black]
line-length = 88
target-version = ['py37']

[tool.isort]
profile = "black"
combine_as_imports = true
skip =  ["venv", "benchmarks"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inheritance_explorer"
version = "0.1.3"
description = "A tool for exploring complex inheritance patters in python code"
readme = "README.rst"
requires-python = ">=3.8"
authors = [
    { name="Chris Havlin", email="chris.havlin@gmail.com" },
]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = ['pydot',
                'pycode_similar',
                'numpy',
                'matplotlib',
                'pyvis',
                'networkx',
                'click',
                'ipywidgets',
                'jupyterlab'
                ]
license={file = "LICENSE"}

[tool.setuptools]
include-package-data = true


[project.scripts]
inheritance_explorer = "inheritance_explorer.cli:map_class"

[project.urls]
"Homepage" = "https://github.com/data-exp-lab/inheritance_explorer"
"Bug Tracker" = "https://github.com/data-exp-lab/inheritance_explorer/issues"


[project.optional-dependencies]
dev = [
    "pytest>=3",
    "pytest-cov",
    "yt>4.1",
    "pre-commit",
]
docs = [
    "Sphinx==1.8.5",
    "jinja2<3.1.0",
    "nbsphinx",
]
lint = [
    "black==22.8.0",
    "isort==5.12.0",
    "flake8==6.0.0"
]

